--- a/web/index.html
+++ b/web/index.html
@@ -148,7 +148,7 @@
         <!-- 顶部状态栏 -->
         <header class="h-16 bg-slate-900 border-b border-slate-700 flex items-center px-6 justify-between shadow-lg shrink-0">
             <div>
-                <h1 class="text-xl font-bold tracking-wider text-white">SMART CUSTOMS AGENT</h1>
+                <h1 class="text-xl font-bold tracking-wider text-white">智能报关系统</h1>
                 <p class="text-xs text-slate-400">智慧口岸自动化报关辅助决策系统 v2.1 (LangChain Edition)</p>
             </div>
             <div class="flex gap-4 text-sm text-slate-300">
