--- a/web/index.html
+++ b/web/index.html
@@ -296,14 +296,16 @@
                 </div>
             </div>
         </div>
+
+        </div>
     </div>
 
     <!-- 脚本引入顺序很重要 -->
     <script src="js/i18n.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/audit.js"></script>
-    <script src="js/chat.js"></script>
-    <script src="js/report.js"></script>
+    <script src="js/config.js?v=3.0.3"></script>
+    <script src="js/app.js?v=3.0.3"></script>
+    <script src="js/audit.js?v=3.0.3"></script>
+    <script src="js/chat.js?v=3.0.3"></script>
+    <script src="js/report.js?v=3.0.3"></script>
 </body>
 </html>
