对话时工具调用显示异常修复

--- a/web/index.html
+++ b/web/index.html
@@ -19,13 +19,13 @@
     <!-- ================= 侧边导航栏 ================= -->
     <nav class="w-16 bg-slate-900 border-r border-slate-700 flex flex-col items-center py-4 z-20 gap-2 shrink-0 shadow-xl">
         <div class="mb-4 text-cyan-400 animate-pulse"><i class="fa-solid fa-shield-halved text-2xl"></i></div>
-        
+
         <button onclick="switchModule('audit')" id="nav-audit" class="nav-active w-full h-16 flex flex-col items-center justify-center text-slate-400 hover:text-cyan-400 transition-all hover:bg-slate-800">
             <i class="fa-solid fa-file-contract text-xl mb-1"></i><span class="text-[10px]" data-i18n="nav_audit">审单</span>
         </button>
 
         <button onclick="switchModule('chat')" id="nav-chat" class="w-full h-16 flex flex-col items-center justify-center text-slate-400 hover:text-cyan-400 transition-all hover:bg-slate-800">
-            <i class="fa-solid fa-comments text-xl mb-1"></i><span class="text-[10px]" data-i18n="nav_chat">咨询</span>
+            <i class="fa-solid fa-comments text-xl mb-1"></i><span class="text-[10px]" data-i18n="nav_chat">智能体</span>
         </button>
 
         <button onclick="switchModule('report')" id="nav-report" class="w-full h-16 flex flex-col items-center justify-center text-slate-400 hover:text-cyan-400 transition-all hover:bg-slate-800">
